--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="stylesheet" href="/app/static/css/main.css">
 <title>Tequila Collection</title>
 </head>
 <body>
@@ -29,14 +30,14 @@
                     </li>
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
-                        <a href="{{ url_for('auth.logout) }}" class="nav-link">Logout</a>
+                        <a href="{{ url_for('auth.logout') }}" class="nav-link">Logout</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
                         <a href="{{ url_for('auth.signin') }}" class="nav-link">Sign In</a>
                     </li>
                     <li class="nav-item">
-                        <a href="{{ url_for('auth.signup) }}" class="nav-link">Sign Up</a>
+                        <a href="{{ url_for('auth.signup') }}" class="nav-link">Sign Up</a>
                     </li>
                     {% endif %}
                 </ul>
