--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container">
-            <a href="{{ url_for('site.home') }}" class="navbar-brand">Car Collection</a>
+            <a href="{{ url_for('site.home') }}" class="navbar-brand">Tequila Collection</a>
             <button 
                 class="navbar-toggler" 
                 type="button" 
